# MRC

./: .clang-format  .clang-tidy  .dockerignore  .gdb_history  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile copy  Notes.md  README.md  debug_ray.py  dependencies.yaml  mrc.code-workspace  srf.code-workspace  vcpkg.json
cpp/mrc/: CMakeLists.txt
cpp/mrc/benchmarks/: CMakeLists.txt  bench_baselines.cpp  bench_coroutines.cpp  bench_descriptors.cpp  bench_fibers.cpp  bench_mrc.cpp  bench_segment.cpp  main.cpp
cpp/mrc/include/mrc/: api.hpp  constants.hpp  forward.hpp  mrc.hpp  type_traits.hpp  types.hpp
cpp/mrc/src/internal/: async_service.cpp  async_service.hpp  expected.hpp  forward.hpp  placement_group.hpp  service.cpp  service.hpp
cpp/mrc/src/tests/: CMakeLists.txt  common.cpp  common.hpp  test_codable.cpp  test_control_plane.cpp  test_control_plane_components.cpp  test_expected.cpp  test_grpc.cpp  test_main.cpp  test_memory.cpp  test_network.cpp  test_next.cpp  test_partition_manager.cpp  test_pipeline.cpp  (+11 more)
cpp/mrc/tests/: CMakeLists.txt  test_channel.cpp  test_edges.cpp  test_executor.cpp  test_macros.cpp  test_main.cpp  test_metrics.cpp  test_mrc.cpp  test_mrc.hpp  test_node.cpp  test_pipeline.cpp  test_segment.cpp  test_segment.hpp  test_string_utils.cpp  test_thread.cpp  test_type_utils.cpp
cpp/srf/: CMakeLists.txt
cpp/srf/tests/: CMakeLists.txt  test_channel.cpp  test_executor.cpp  test_main.cpp  test_memory.cpp  test_metrics.cpp  test_runnable.cpp  test_rx.cpp  test_segment.hpp  test_segment_components.cpp  test_srf.hpp
docs/quickstart/: CMakeLists.txt  README.md  compile.sh  environment_cpp.yml
docs/quickstart/cpp/: CMakeLists.txt
docs/quickstart/hybrid/: .gitattributes  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  versioneer.py
docs/quickstart/python/: .gitattributes  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg  versioneer.py
protos/: CMakeLists.txt
protos/mrc/protos/: architect.proto  architect_state.proto  codable.proto  remote_descriptor.proto  tensor_meta_data.proto  test.proto
protos/srf/protos/: architect.proto  codable.proto  remote_descriptor.proto  tensor_meta_data.proto  test.proto
python/: CMakeLists.txt  MANIFEST.in  pyproject.toml  pytest.ini  setup.cfg  setup.py  versioneer.py
python/mrc/: __init__.py  _version.py
python/mrc/_pymrc/: CMakeLists.txt
python/mrc/benchmarking/: CMakeLists.txt  __init__.py  trace_statistics.cpp  tracers.cpp  watchers.cpp
python/mrc/core/: CMakeLists.txt  __init__.py  common.cpp  coro.cpp  executor.cpp  log_handler.py  logging.cpp  node.cpp  operators.cpp  options.cpp  pipeline.cpp  plugins.cpp  segment.cpp  subscriber.cpp
python/mrc/tests/: CMakeLists.txt  sample_modules.cpp  test_edges.cpp  utils.cpp
python/srf/: __init__.py
python/srf/_pysrf/: CMakeLists.txt
python/srf/benchmarking/: CMakeLists.txt  trace_statistics.cpp  tracer.cpp  tracers.cpp  watchers.cpp
python/srf/core/: CMakeLists.txt  __init__.py  adaptors.cpp  common.cpp  executor.cpp  ingress.cpp  logging.cpp  node.cpp  operators.cpp  options.cpp  pipeline.cpp  plugins.cpp  segment.cpp  segment_definition.cpp  segment_modules.cpp  subscriber.cpp  unittest_exports.cpp
python/srf/tests/: CMakeLists.txt  sample_modules.cpp  test_edges.cpp  utils.cpp
python/tests/: conftest.py  string_reader_input.txt  test_benchmarking.py  test_coro.py  test_edges.cpp  test_edges.py  test_executor.py  test_gil_tls.py  test_json_values_cast.py  test_logging.py  test_mirror_tap.py  test_module_registry.py  test_morpheus_cpp.py  test_morpheus_fil-cpp.py  test_morpheus_py.py  test_node.py  test_operators.py  test_options.py  test_pipeline.py  test_plugin_modules.py  test_pycoro.py  test_segment_modules.py  test_stat_gather.py
quickstart/: CMakeLists.txt  README.md
quickstart/examples/cpp/: CMakeLists.txt
quickstart/include/: sources.hpp
quickstart/src/: sources.cpp
src/tests/: CMakeLists.txt  common.cpp  common.hpp  test_architect.cpp  test_codable.cpp  test_control_plane.cpp  test_control_plane_components.cpp  test_cpp20.cpp  test_expected.cpp  test_grpc.cpp  test_main.cpp  test_memory.cpp  test_network.cpp  test_next.cpp  test_options.cpp  test_partitions.cpp  test_pipeline.cpp  test_ranges.cpp  test_remote_descriptor.cpp  test_resources.cpp  test_reusable_pool.cpp  test_runnable.cpp  test_system.cpp  test_topology.cpp  test_ucx.cpp
src/tests/nodes/: common_nodes.cpp  common_nodes.hpp  common_sinks.cpp  common_sources.cpp
src/tests/pipelines/: common_pipelines.hpp  multi_segment.cpp  single_segment.cpp
src/tests/segments/: common_segments.cpp  common_segments.hpp
tests/: CMakeLists.txt  test_channel.cpp  test_codable.cpp  test_edges.cpp  test_executor.cpp  test_main.cpp  test_memory.cpp  test_metrics.cpp  test_module_registry.cpp  test_module_util.cpp  test_modules.cpp  test_modules.hpp  test_mrc.hpp  test_node.cpp  test_pipeline.cpp  test_remote_descriptor.cpp  test_runnable.cpp  test_segment.cpp  test_segment.hpp  test_segment_components.cpp  test_srf.cpp  test_srf.hpp  test_type_utils.cpp
tests/benchmarking/: CMakeLists.txt  test_benchmarking.hpp  test_main.cpp  test_stat_gather.cpp  test_stat_gather.hpp  test_utils.cpp
tests/logging/: CMakeLists.txt  test_logging.cpp
tests/modules/: CMakeLists.txt  dynamic_module.cpp  test_mirror_tap_module.cpp  test_module_registry.cpp  test_module_util.cpp  test_modules.hpp  test_segment_modules.cpp
tools/nvrpc/: CMakeLists.txt
tools/nvrpc/src/: executor.cc  server.cc
tools/nvrpc/tests/: CMakeLists.txt  test_build_client.h  test_build_server.h  test_main.cc  test_pingpong.cc  test_pingpong.h  test_resources.cc  test_resources.h  test_server.cc  testing.proto
ts/control-plane/: .eslintrc.json  .gitignore  .prettierrc  CMakeLists.txt  README.md  jest.config.js  jest.config.ts  nodemon.json  old_jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
ts/control-plane/test-reporter/: index.js  test-reporter.ts
(+2013 files in other folders)
